--- a/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
+++ b/DiandianIOS/DiandianIOS/DAMyTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="5053" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -41,23 +41,11 @@
                         <fontDescription key="fontDescription" type="system" pointSize="31"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aF1-P7-3Qf">
-                        <rect key="frame" x="20" y="58" width="76" height="37"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                        <state key="normal" title="菜单" backgroundImage="top_bg3.png">
-                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                        </state>
-                        <connections>
-                            <action selector="onOrderViewTouched:" destination="zQa-zO-Ab7" eventType="touchUpInside" id="LPX-Mz-OUX"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <size key="customSize" width="189" height="200"/>
             <connections>
-                <outlet property="btnOrderList" destination="aF1-P7-3Qf" id="fgS-5Q-vZa"/>
                 <outlet property="imgTable" destination="Edt-Gx-nOD" id="wC8-Gl-0eM"/>
                 <outlet property="tableTitle" destination="aUb-p6-ecs" id="z6E-na-LQn"/>
                 <outlet property="unfinishedCount" destination="eSt-nB-l1X" id="2db-QD-39s"/>
@@ -68,6 +56,5 @@
     <resources>
         <image name="btn_round_red.png" width="300" height="300"/>
         <image name="desk_bottond.png" width="338" height="286"/>
-        <image name="top_bg3.png" width="161" height="44"/>
     </resources>
 </document>
