--- a/DiandianIOS/DiandianIOS/DARightSideMenuViewController.xib
+++ b/DiandianIOS/DiandianIOS/DARightSideMenuViewController.xib
@@ -10,6 +10,7 @@
                 <outlet property="backBtn" destination="jkI-oK-D1b" id="dnj-dO-zkP"/>
                 <outlet property="changeBtn" destination="1E9-fs-cdg" id="p46-UU-drd"/>
                 <outlet property="checkBtn" destination="Q8X-1B-rty" id="5s8-Ft-zsa"/>
+                <outlet property="deskLabel" destination="zBo-cR-jMt" id="Fd5-tX-jFW"/>
                 <outlet property="hidBtn" destination="AEZ-hZ-F8D" id="K6s-Cg-Voy"/>
                 <outlet property="openBtn" destination="5uE-Vg-wK1" id="kvf-Vi-t3V"/>
                 <outlet property="view" destination="2" id="3"/>
@@ -80,6 +81,13 @@
                         <action selector="hideTouched:" destination="-1" eventType="touchUpInside" id="Jk0-8M-pZS"/>
                     </connections>
                 </button>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBo-cR-jMt">
+                    <rect key="frame" x="43" y="20" width="85" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="0.70000000000000007" colorSpace="calibratedWhite"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
